<?xml version="1.0"?>
<package format="3">
  <name>mushr_base</name>
  <version>0.0.0</version>
  <description>The mushr_base package</description>

  <maintainer email="schmittle@todo.todo">schmittle</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>mushr_hardware</exec_depend>
  <exec_depend>ackermann_cmd_mux</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>mushr_description</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>vesc_main</exec_depend>
  <exec_depend>vesc_msgs</exec_depend>
</package>
