<?xml version="1.0"?>
<package format="2">
  <name>mushr_base</name>
  <version>0.0.0</version>
  <description>The mushr_base package</description>

  <maintainer email="schmittle@todo.todo">schmittle</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>mushr_hardware</exec_depend>
  <exec_depend>ackermann_cmd_mux</exec_depend>
  <exec_depend>vesc_msgs</exec_depend>
</package>
